// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildReactAgentsMd > includes the React architecture and stack details 1`] = `
"# test-react — Agent Instructions

## Project Identity

This is a React + Vite + TypeScript application scaffolded by Bumpers.

- Router: TanStack Router in \`src/routes/\`.
- State: Zustand state in \`src/store/\`.
- Data fetching: TanStack Query for server state.
- HTTP: Axios in \`src/lib/api.ts\`.
- Styling: Tailwind CSS v4 in \`src/index.css\`.

\`AGENTS.md\` is the fullest project instruction file. Secondary instruction files must stay aligned to the same contract.

## Hard Rules

1. Read \`AGENTS.md\` before making changes.
   Why: Project rules override generic model habits.

2. Use test-first thinking for risky behavior and regressions.
   Why: Tests should clarify architecture and protect meaningful behavior, not satisfy an artifact quota.

3. Prefer the smallest correct change.
   Why: Extra code increases maintenance cost, review surface, and bug risk.

4. Keep units small and single-purpose.
   Why: Smaller files are easier to read, test, and change safely.

5. Keep state at the narrowest level that owns the behavior. Lift state only when multiple consumers need shared coordination.
   Why: Local state reduces coupling; shared state should exist only for shared behavior.

6. Prefer pure functions for business logic and test them directly.
   Why: Pure logic is easier to verify than UI-bound logic.

7. Isolate side effects and inject dependencies when that materially improves testability.
   Why: Hidden dependencies make tests brittle and push logic into integration-only paths.

8. Do not introduce abstractions until duplication or complexity clearly justifies them.
   Why: Premature abstraction usually creates more code and more coupling.

9. Reuse existing components, helpers, and patterns before creating new ones.
   Why: Duplication fragments the codebase and weakens maintainability.

10. Do not weaken tests, coverage, lint rules, or type checks to make a change pass.
   Why: Guardrails are part of the product, not temporary obstacles.

## Architecture Boundaries

- Routes coordinate page composition, data loading triggers, and shared layout. Keep dense business logic out of route bodies.
- Reusable user-facing UI belongs in \`src/Components/\`.
- Business and domain logic belongs in feature modules or \`src/lib/\`, not inline in route JSX.
- Side-effectful code should stay at the boundary around API calls, browser APIs, timers, and navigation.
- Parent components own shared hydration, cross-child coordination, shared filters, and route-level composition.
- Child components own local UI behavior such as sort state, inline control state, row expansion, button interactions, and transient input state.
- Do not hoist local interaction state unless another consumer actually needs it.
- When a file starts combining multiple responsibilities, split it.
- Simplicity means the smallest correct behavior with the fewest moving parts. Avoid speculative extensibility and ornamental indirection.
- Prefer duplication over the wrong abstraction. Extract shared code only when the duplication is meaningful.
- Store logic should stay focused on state transitions and orchestration, not transport details or router concerns.
- File-based routes live in \`src/routes/\`. Treat \`src/routeTree.gen.ts\` as generated output and never edit it manually.

## Testing Contract

- Testing is a spectrum. Use test-first thinking to define architecture, observable behavior, and regression risk before implementation.
- Prioritize business rules, validation, state transitions, error paths, dependency-heavy components, and code imported throughout the app.
- Add regression tests for bugs and tests at API, browser, storage, and state-management boundaries.
- Do not add tests solely for route/root composition, provider wiring, static configuration, declarations, re-exports, generated code, or trivial presentation.
- Co-locate valuable unit tests with the source they validate.
- Use Storybook for reusable visual components with meaningful states.
- Use E2E tests for critical user journeys and cross-boundary regressions, not every small component interaction.
- Coverage has an 80% project-wide floor; never inflate it with assertions that cannot catch a meaningful regression.

## Verification Contract

Before claiming work is complete:
- run the relevant tests for the change
- run the required lint, type, and build checks for the template
- report what you verified and what you did not verify
- say explicitly when a verification step could not be run

## File-Specific Conventions

- Keep tests co-located with the source they validate.
- Reusable UI belongs in \`src/Components/\`.
- Use \`src/test-utils.tsx\` for provider-aware rendering in tests.
- TypeScript strictness, project-level coverage thresholds, lint rules, and source-structure checks stay on.
- Route files in \`src/routes/\` should stay thin and focused on composition.
- \`src/routeTree.gen.ts\` is generated. Do not edit it, test it directly, or lower guardrails to accommodate it.
- Shared state belongs in \`src/store/\` only when multiple consumers need coordinated behavior.
- Keep API clients and side-effectful data access in \`src/lib/\`. Prefer pure helpers for response shaping and validation.

## Commands

- \`npm run dev\`
- \`npm run generate-routes\`
- \`npm run build\`
- \`npm run test\`
- \`npm run test:coverage\`
- \`npm run test:e2e\`
- \`npm run test:colocate\`
- \`npm run lint\`
- \`npm run format:check\`
- \`npm run storybook\`
"
`;

exports[`buildReactClaudeMd > is self-contained for Claude Code with stack-aware guidance 1`] = `
"# test-react — Claude Instructions

This is a React + Vite + TypeScript application scaffolded by Bumpers.

- Router: TanStack Router in \`src/routes/\`.
- State: Zustand state in \`src/store/\`.
- Data fetching: TanStack Query for server state.
- HTTP: Axios in \`src/lib/api.ts\`.
- Styling: Tailwind CSS v4 in \`src/index.css\`.

## Hard Rules

- Read \`CLAUDE.md\` before making changes. Why: Project rules override generic model habits.
- Use test-first thinking for risky behavior and regressions. Why: Tests should clarify architecture and protect meaningful behavior, not satisfy an artifact quota.
- Prefer the smallest correct change. Why: Extra code increases maintenance cost, review surface, and bug risk.
- Keep units small and single-purpose. Why: Smaller files are easier to read, test, and change safely.
- Keep state at the narrowest level that owns the behavior. Lift state only when multiple consumers need shared coordination. Why: Local state reduces coupling; shared state should exist only for shared behavior.
- Prefer pure functions for business logic and test them directly. Why: Pure logic is easier to verify than UI-bound logic.
- Isolate side effects and inject dependencies when that materially improves testability. Why: Hidden dependencies make tests brittle and push logic into integration-only paths.
- Do not introduce abstractions until duplication or complexity clearly justifies them. Why: Premature abstraction usually creates more code and more coupling.
- Reuse existing components, helpers, and patterns before creating new ones. Why: Duplication fragments the codebase and weakens maintainability.
- Do not weaken tests, coverage, lint rules, or type checks to make a change pass. Why: Guardrails are part of the product, not temporary obstacles.

## Architecture Boundaries

- Routes should stay thin and focus on composition.
- Business logic belongs in feature modules or \`src/lib/\` and should be kept testable.
- Keep state at the narrowest level that owns the behavior. Hoist state only for real shared coordination.
- Reusable UI belongs in \`src/Components/\`.
- Store logic should stay focused on state transitions and orchestration.
- \`src/routeTree.gen.ts\` is generated output. Never edit it manually.

## Testing Contract

- Use test-first thinking for architecture, risky behavior, and regressions; do not require a test for every file.
- Prioritize boundaries, business rules, error paths, dependency-heavy components, and widely reused code.
- Skip tests that only restate framework wiring, static configuration, or trivial rendering.
- Use Storybook for reusable visual components with meaningful states.
- Use E2E tests only for critical user journeys and cross-boundary regressions.

## Verification Contract

Before claiming work is complete:
- run the relevant tests for the change
- run the required lint, type, and build checks for the template
- report what you verified and what you did not verify
- say explicitly when a verification step could not be run

## Commands

- \`npm run dev\`
- \`npm run generate-routes\`
- \`npm run build\`
- \`npm run test\`
- \`npm run test:coverage\`
- \`npm run test:e2e\`
- \`npm run test:colocate\`
- \`npm run lint\`
- \`npm run format:check\`
- \`npm run storybook\`

\`AGENTS.md\` contains the fullest version of this same contract.
"
`;

exports[`buildReactCopilotMd > is self-contained for Copilot with stack-aware testing and verification guidance 1`] = `
"# test-react — Copilot Instructions

This is a React + Vite + TypeScript application scaffolded by Bumpers.

- Router: TanStack Router in \`src/routes/\`.
- State: Zustand state in \`src/store/\`.
- Data fetching: TanStack Query for server state.
- HTTP: Axios in \`src/lib/api.ts\`.
- Styling: Tailwind CSS v4 in \`src/index.css\`.

## Hard Rules

- Read \`.github/copilot-instructions.md\` before making changes. Why: Project rules override generic model habits.
- Use test-first thinking for risky behavior and regressions. Why: Tests should clarify architecture and protect meaningful behavior, not satisfy an artifact quota.
- Prefer the smallest correct change. Why: Extra code increases maintenance cost, review surface, and bug risk.
- Keep units small and single-purpose. Why: Smaller files are easier to read, test, and change safely.
- Keep state at the narrowest level that owns the behavior. Lift state only when multiple consumers need shared coordination. Why: Local state reduces coupling; shared state should exist only for shared behavior.
- Prefer pure functions for business logic and test them directly. Why: Pure logic is easier to verify than UI-bound logic.
- Isolate side effects and inject dependencies when that materially improves testability. Why: Hidden dependencies make tests brittle and push logic into integration-only paths.
- Do not introduce abstractions until duplication or complexity clearly justifies them. Why: Premature abstraction usually creates more code and more coupling.
- Reuse existing components, helpers, and patterns before creating new ones. Why: Duplication fragments the codebase and weakens maintainability.
- Do not weaken tests, coverage, lint rules, or type checks to make a change pass. Why: Guardrails are part of the product, not temporary obstacles.

## Architecture Boundaries

- Routes should stay thin and focus on composition.
- Business logic belongs in feature modules or \`src/lib/\` and should be kept testable.
- Keep state at the narrowest level that owns the behavior. Hoist state only for real shared coordination.
- Reusable UI belongs in \`src/Components/\`.
- Store logic should stay focused on state transitions and orchestration.
- \`src/routeTree.gen.ts\` is generated output. Never edit it manually.

## Testing Contract

- Use test-first thinking for architecture, risky behavior, and regressions; do not require a test for every file.
- Prioritize boundaries, business rules, error paths, dependency-heavy components, and widely reused code.
- Skip tests that only restate framework wiring, static configuration, or trivial rendering.
- Use Storybook for reusable visual components with meaningful states.
- Use E2E tests only for critical user journeys and cross-boundary regressions.

## Verification Contract

Before claiming work is complete:
- run the relevant tests for the change
- run the required lint, type, and build checks for the template
- report what you verified and what you did not verify
- say explicitly when a verification step could not be run

## Completion Checklist

- \`npm run test\`
- \`npm run generate-routes\`
- \`npm run lint\`
- \`npm run format:check\`
- \`npm run build\`
- \`npm run test:colocate\`
- \`npm run test:e2e\` for user-critical flow changes

\`AGENTS.md\` contains the fullest version of this same contract.
"
`;

exports[`buildReactCursorrules > is self-contained for Cursor with stack-aware constraints and commands 1`] = `
"# test-react — Cursor Rules

This is a React + Vite + TypeScript application scaffolded by Bumpers.

- Router: TanStack Router in \`src/routes/\`.
- State: Zustand state in \`src/store/\`.
- Data fetching: TanStack Query for server state.
- HTTP: Axios in \`src/lib/api.ts\`.
- Styling: Tailwind CSS v4 in \`src/index.css\`.

## Hard Rules

- Read \`.cursorrules\` before making changes. Why: Project rules override generic model habits.
- Use test-first thinking for risky behavior and regressions. Why: Tests should clarify architecture and protect meaningful behavior, not satisfy an artifact quota.
- Prefer the smallest correct change. Why: Extra code increases maintenance cost, review surface, and bug risk.
- Keep units small and single-purpose. Why: Smaller files are easier to read, test, and change safely.
- Keep state at the narrowest level that owns the behavior. Lift state only when multiple consumers need shared coordination. Why: Local state reduces coupling; shared state should exist only for shared behavior.
- Prefer pure functions for business logic and test them directly. Why: Pure logic is easier to verify than UI-bound logic.
- Isolate side effects and inject dependencies when that materially improves testability. Why: Hidden dependencies make tests brittle and push logic into integration-only paths.
- Do not introduce abstractions until duplication or complexity clearly justifies them. Why: Premature abstraction usually creates more code and more coupling.
- Reuse existing components, helpers, and patterns before creating new ones. Why: Duplication fragments the codebase and weakens maintainability.
- Do not weaken tests, coverage, lint rules, or type checks to make a change pass. Why: Guardrails are part of the product, not temporary obstacles.

## Architecture Boundaries

- Routes should stay thin and focus on composition.
- Business logic belongs in feature modules or \`src/lib/\` and should be kept testable.
- Keep state at the narrowest level that owns the behavior. Hoist state only for real shared coordination.
- Reusable UI belongs in \`src/Components/\`.
- Store logic should stay focused on state transitions and orchestration.
- \`src/routeTree.gen.ts\` is generated output. Never edit it manually.

## Testing Contract

- Use test-first thinking for architecture, risky behavior, and regressions; do not require a test for every file.
- Prioritize boundaries, business rules, error paths, dependency-heavy components, and widely reused code.
- Skip tests that only restate framework wiring, static configuration, or trivial rendering.
- Use Storybook for reusable visual components with meaningful states.
- Use E2E tests only for critical user journeys and cross-boundary regressions.

## Verification Contract

Before claiming work is complete:
- run the relevant tests for the change
- run the required lint, type, and build checks for the template
- report what you verified and what you did not verify
- say explicitly when a verification step could not be run

## Commands

- \`npm run dev\`
- \`npm run generate-routes\`
- \`npm run build\`
- \`npm run test\`
- \`npm run test:coverage\`
- \`npm run test:e2e\`
- \`npm run test:colocate\`
- \`npm run lint\`
- \`npm run format:check\`
- \`npm run storybook\`

\`AGENTS.md\` contains the fullest version of this same contract.
"
`;
